crates/test-ui/ui/declare_add_bad_method.stderr
error[E0277]: the trait bound `fn(_, _): MethodImplementation` is not satisfied
 --> ui/declare_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _));
  |                 ----------            ^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _): MethodImplementation` is not satisfied
 --> ui/declare_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _));
  |                 ----------            ^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _) -> _: MethodImplementation` is not satisfied
 --> ui/declare_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _) -> _);
  |                 ----------            ^^^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _) -> _`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _) -> _: MethodImplementation` is not satisfied
 --> ui/declare_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _) -> _);
  |                 ----------            ^^^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _) -> _`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _, _): MethodImplementation` is not satisfied
 --> ui/declare_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo:), foo as fn(_, _, _));
  |                 ----------             ^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(&'a T, objc2::runtime::Sel) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F) -> R
            extern "C" fn(&'a T, objc2::runtime::Sel, A, B, C, D, E, F, G) -> R
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/declare/mod.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
